# maze-lite

./: Cargo.toml  README.md
src/: animated_sprites.rs  main.rs  maze.rs  player.rs
src/player/: input.rs  movement.rs
